# Store

./: Cargo.toml  LICENSE  README.md  STORE_CONCEPT.md  catalog.toml
.github/workflows/: validate.yml
Node/: catalog.toml  index.toml  store.toml
Node/auth/kanidm/: kanidm.toml
Node/cache/dragonfly/: dragonfly.toml
Node/catalog/: i18n.toml
Node/chat/tuwunel/: tuwunel.toml
Node/collab/cryptpad/: cryptpad.toml
Node/database/postgres/: postgres.toml  postgres.yml
Node/git/forgejo/: forgejo.toml
Node/i18n/: am.toml  ar.toml  be.toml  bg.toml  bn.toml  cs.toml  da.toml  de.toml  el.toml  es.toml  et.toml  fa.toml  fi.toml  fr.toml  ha.toml  hi.toml  hr.toml  hu.toml  id.toml  index.toml  it.toml  ja.toml  jv.toml  ko.toml  lt.toml  lv.toml  mr.toml  nl.toml  no.toml  pa.toml  pl.toml  ps.toml  pt.toml  ru.toml  sk.toml  sl.toml  sq.toml  sr.toml  sv.toml  sw.toml  (+9 more)
Node/i18n/am/: manifest.toml  ui.toml
Node/i18n/ar/: manifest.toml
Node/i18n/be/: manifest.toml  ui.toml
Node/i18n/bg/: manifest.toml  ui.toml
Node/i18n/bn/: manifest.toml
Node/i18n/da/: ui.toml  (+1 more)
apps/: catalog.toml
bundles/zentinel/: catalog.toml
crates/store-sdk/: Cargo.toml
crates/store-sdk/src/: catalog.rs  client.rs  i18n.rs  lib.rs  manifest.rs
desktop/: catalog.toml
init/: catalog.toml
init/de/: description.ftl
init/nl/: description.ftl
node/: catalog.toml  index.toml  store.toml
node/catalog/: modules.toml
shared/: catalog.toml
themes/: catalog.toml
themes/cloud-white/: catalog.toml
themes/midnight-blue/: catalog.toml
themes/nordic-dark/: catalog.toml
(+314 files in other folders)
