[workspace]
members  = ["crates/store-sdk"]
resolver = "2"

[workspace.package]
version  = "0.1.0"
edition  = "2021"
license  = "Apache-2.0"
authors  = ["FreeSynergy.Net"]
repository = "https://github.com/FreeSynergy/Store"

[workspace.dependencies]
serde      = { version = "1",   features = ["derive"] }
toml       = { version = "0.8", features = ["preserve_order"] }
anyhow     = { version = "1" }
reqwest    = { version = "0.12", features = ["rustls-tls"], default-features = false }
tokio      = { version = "1",   features = ["full"] }
