[package]
name        = "store-sdk"
description = "FreeSynergy Store — generic catalog, i18n and client SDK"
version.workspace   = true
edition.workspace   = true
license.workspace   = true

[dependencies]
serde      = { workspace = true }
serde_json = { version = "1" }
toml       = { workspace = true }
anyhow     = { workspace = true }
reqwest    = { workspace = true }
tokio      = { workspace = true }
